# tl_fairness

./: .gitignore  .gitmodules  EXPERIMENTS.md  Snakefile  __init__.py  pyproject.toml  science-repo.md
analysis/analyze_adult/: run.py
analysis/analyze_law/: run.py
analysis/download_adult/: run.py
analysis/download_law/: run.py
analysis/fig1_parity/: run.py
analysis/fig2_robust/: run.py
analysis/fig3_variance/: run.py
analysis/fig4_cmi/: run.py
analysis/fig5_importance/: run.py
analysis/fig6_tmle/: run.py
analysis/fig7_cmi_tmle/: run.py
analysis/sim_cmi/: run.py
analysis/sim_cmi_tmle/: run.py
analysis/sim_parity/: run.py
analysis/sim_robust/: run.py
analysis/sim_tmle/: run.py
analysis/table1_inference/: run.py
analysis/table2_cmi_truth/: run.py
analysis/tools/: validate.py
experiments/: README.md  adult_experiment.py  audit_glm.py  baselines.py  cmi_experiment.py  cmi_helper.py  exp1_parity_coverage.py  exp2_misspec_coverage.py  exp3_cmi_permutation.py  law_experiment.py  robust_experiment.py  sim1.py
notebooks/: cmi.ipynb  data_analysis.ipynb  robust.ipynb
slurm/: analyze_fulldata.sbatch  cmi_tmle.sbatch  figures.sbatch  fill_tmle.py  fill_tmle.sbatch  quick_table1.py
tests/: test_tmle.py  test_tmle_jax.py
tl_fairness/: __init__.py
tlfair/: cmi_sim.py  metrics.py  plotting.py  simulations.py  superlearner.py  tmle.py  tmle_jax.py  tmle_sim.py
