[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tl-fairness"
version = "0.1.0"
description = "Targeted learning for inference on data fairness."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "ipykernel",
  "seaborn>=0.13.2",
  "matplotlib>=3.10.9",
  "snakemake>=8",
]

[project.optional-dependencies]
# GPU/CPU-accelerated backend for the coverage simulations and TMLE targeting.
# Optional: the core pipeline never imports JAX.
jax = ["jax>=0.4.30"]
jax-cuda = ["jax[cuda12]>=0.4.30"]
# Development / test tooling.
dev = ["pytest>=8"]
# Exploratory baseline-coverage experiments (experiments/): statsmodels backs the
# GLM cross-check in audit_glm.py. Not needed for the core pipeline.
experiments = [
    "statsmodels>=0.14.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tlfair*"]
namespaces = true
